--- a/app/page.html
+++ b/app/page.html
@@ -54,9 +54,9 @@
       </div>
     </div>
   </header>
-  <main class="main">
-    
-  </main>
+
+  <main class="main"></main>
+
   <footer class="footer">
     <div class="container">
       <div class="footer-top">
