--- a/app/blog-one.html
+++ b/app/blog-one.html
@@ -58,7 +58,7 @@
     <section class="top">
       <div class="top__container" style="background-image: url('images/top-bg.jpg');">
         <div class="container">
-          <h2 class="top__title title">BLOG STANDARD</h2>
+          <h2 class="top__title title">BLOG DETAILS</h2>
           <div class="breadcrumbs">
             <ul class="breadcrumbs__list">
               <li class="breadcrumbs__item">
@@ -68,7 +68,7 @@
               </li>
               <li class="breadcrumbs__item">
                 <a class="breadcrumbs__link" href="#">
-                  Blog page
+                  Blog one
                 </a>
               </li>
             </ul>
@@ -76,93 +76,168 @@
         </div>
       </div>
     </section>
-    <section class="blog-page">
+    <section class="blog-page blog-one">
       <div class="container">
         <div class="blog-page__inner">
-          <div class="blog-page__content">
-            <div class="blog-page__item">
-              <a class="blog-page__item-link" href="#">
-                <img class="blog-page__img" src="images/blog/page-1.jpg" alt="blog img">
-              </a>
-              <div class="blog-page__item-box">
-                <a class="blog-page__item-title" href="#">
-                  Be prepared to sweat a lot, but at least in the Southern regions there’s a good chance you’ll get to
-                  enjoy!
+          <div class="blog-page__content blog-one__content">
+            <img class="blog-page__img" src="images/blog/page-1.jpg" alt="blog img">
+            <div class="blog-one__text">
+              <ul class="blog-one__info">
+                <li class="blog-one__info-item">
+                  <span class="blog-one__info-link">
+                    16 February, 2020
+                  </span>
+                </li>
+                <li class="blog-one__info-item">
+                  <a class="blog-one__info-link blog-one__info-link--comment" href="#">
+                    3 comments
+                  </a>
+                </li>
+                <li class="blog-one__info-item">
+                  <a class="blog-one__info-link blog-one__info-link--author" href="#">
+                    By Admin
+                  </a>
+                </li>
+              </ul>
+              <h4>
+                In Particular The Global World Of Lorem Ipsum Asap Tempor
+              </h4>
+              <p>
+                Lorem ipsum dolor siit amet, consectetur adiscing elit, sed do eiusmod tempor incididunt more utmm
+                labore et dolore
+                magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ecenas accumsan lacus vel
+                facilisis. Quis ipsum
+                suspenidisse ultrices gravida. Risus comdouma viverra more maecenas accumsan lacus vel facilisis.
+              </p>
+              <blockquote>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elt, sed does eiusmod tempor incididunt ut labore et
+                dolore magna
+                aliqua dilo. Quis ipsum suspendisse ultrices gravida.
+              </blockquote>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt of in utmm
+                labore et dolore
+                magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ecenas accumsan lacus vel
+                facilisis. Quis ipsum
+                suspendisse ultrices gravida. Risus comdoumar viverra more maecenas accumsan lacus vel facilisis.
+              </p>
+              <img class="blog-one__left-img" src="images/blog/blog-one.jpg" alt="img">
+              <p>
+                Lorem ipsum dolor sit amet, consectur picing elit, sed do eusmod tempor incididunt ut mor more labore a
+                doore magna
+                aliqua. Quis into ipsum the suspendisse ultrices grda. Lorem in ipsum dolor sit amet, consectetur
+                adipiscings elit, sed
+                does eiusmod tempor incididunt mod labore et dolore magna aliqua. Quis ipsum in suspendisse fass a
+                ultrices gravida.
+                Loremon ipsum dolor st amaiet, consectetur aipiscinge elit, sed do eiusobimod tempor incididunt uts
+                labore et doloroe
+                gravida.
+              </p>
+            </div>
+            <div class="blog-one__box">
+              <div class="blog-one__tags">
+                <span>TAGS:</span>
+                <a href="#">Fashion</a>,
+                <a href="#">Style</a>
+              </div>
+              <div class="blog-one__share">
+                <span>SHARE:</span>
+                <a href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="18px"
+                    height="18px" viewBox="0 0 18 18" version="1.1">
+                    <g id="surface1">
+                      <path
+                        d="M 16.148438 5.332031 C 16.160156 5.492188 16.160156 5.652344 16.160156 5.8125 C 16.160156 10.691406 12.449219 16.308594 5.664062 16.308594 C 3.574219 16.308594 1.632812 15.703125 0 14.652344 C 0.296875 14.6875 0.582031 14.699219 0.890625 14.699219 C 2.617188 14.699219 4.203125 14.117188 5.472656 13.125 C 3.847656 13.089844 2.488281 12.027344 2.023438 10.566406 C 2.25 10.597656 2.476562 10.621094 2.71875 10.621094 C 3.050781 10.621094 3.378906 10.574219 3.6875 10.496094 C 2 10.152344 0.730469 8.667969 0.730469 6.875 L 0.730469 6.828125 C 1.222656 7.105469 1.792969 7.277344 2.398438 7.296875 C 1.40625 6.636719 0.753906 5.503906 0.753906 4.226562 C 0.753906 3.539062 0.9375 2.914062 1.257812 2.363281 C 3.074219 4.601562 5.800781 6.066406 8.863281 6.226562 C 8.804688 5.949219 8.773438 5.664062 8.773438 5.378906 C 8.773438 3.347656 10.417969 1.691406 12.460938 1.691406 C 13.523438 1.691406 14.480469 2.136719 15.15625 2.855469 C 15.988281 2.695312 16.789062 2.386719 17.496094 1.964844 C 17.222656 2.820312 16.640625 3.539062 15.875 3.996094 C 16.617188 3.917969 17.335938 3.710938 18 3.425781 C 17.496094 4.15625 16.871094 4.808594 16.148438 5.332031 Z M 16.148438 5.332031 " />
+                    </g>
+                  </svg>
                 </a>
-                <div class="blog-box">
-                  <a class="blog-box__author" href="#">By Admin</a>
-                  <div class="blog-box__date">10 January, 2020</div>
-                </div>
-                <p class="blog-page__item-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna
-                  aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodoami viverra maycenas acchmsan lacus vel
-                  facilisis.
+                <a href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16px"
+                    height="18px" viewBox="0 0 16 18" version="1.1">
+                    <g>
+                      <path
+                        d="M 3.582031 15.75 L 0.265625 15.75 L 0.265625 5.234375 L 3.582031 5.234375 Z M 1.921875 3.800781 C 0.859375 3.800781 0 2.9375 0 1.890625 C 0 0.847656 0.859375 0 1.921875 0 C 2.980469 0 3.84375 0.847656 3.84375 1.890625 C 3.84375 2.9375 2.980469 3.800781 1.921875 3.800781 Z M 15.996094 15.75 L 12.6875 15.75 L 12.6875 10.632812 C 12.6875 9.410156 12.660156 7.847656 10.960938 7.847656 C 9.238281 7.847656 8.972656 9.171875 8.972656 10.542969 L 8.972656 15.75 L 5.660156 15.75 L 5.660156 5.234375 L 8.839844 5.234375 L 8.839844 6.667969 L 8.886719 6.667969 C 9.328125 5.84375 10.410156 4.972656 12.027344 4.972656 C 15.382812 4.972656 16 7.148438 16 9.972656 L 16 15.75 Z M 15.996094 15.75 " />
+                    </g>
+                  </svg>
+                </a>
+                <a href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17px"
+                    height="18px" viewBox="0 0 17 17" version="1.1">
+                    <g>
+                      <path
+                        d="M 17 8.691406 C 17 13.390625 13.625 16.734375 8.640625 16.734375 C 3.859375 16.734375 0 13.054688 0 8.5 C 0 3.945312 3.859375 0.265625 8.640625 0.265625 C 10.964844 0.265625 12.925781 1.078125 14.433594 2.421875 L 12.082031 4.574219 C 9.003906 1.746094 3.285156 3.871094 3.285156 8.5 C 3.285156 11.371094 5.691406 13.699219 8.640625 13.699219 C 12.058594 13.699219 13.34375 11.363281 13.542969 10.148438 L 8.640625 10.148438 L 8.640625 7.316406 L 16.863281 7.316406 C 16.945312 7.738281 17 8.144531 17 8.691406 Z M 17 8.691406 " />
+                    </g>
+                  </svg>
+                </a>
+                <a href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="14px"
+                    height="18px" viewBox="0 0 14 18" version="1.1">
+                    <g>
+                      <path
+                        d="M 7.4375 0.226562 C 3.695312 0.226562 0 2.632812 0 6.523438 C 0 9 1.445312 10.40625 2.320312 10.40625 C 2.679688 10.40625 2.886719 9.4375 2.886719 9.160156 C 2.886719 8.835938 2.023438 8.140625 2.023438 6.777344 C 2.023438 3.953125 4.253906 1.949219 7.140625 1.949219 C 9.625 1.949219 11.460938 3.308594 11.460938 5.808594 C 11.460938 7.675781 10.6875 11.175781 8.171875 11.175781 C 7.261719 11.175781 6.484375 10.542969 6.484375 9.636719 C 6.484375 8.308594 7.449219 7.019531 7.449219 5.648438 C 7.449219 3.320312 4.023438 3.742188 4.023438 6.554688 C 4.023438 7.148438 4.101562 7.800781 4.375 8.339844 C 3.871094 10.425781 2.84375 13.539062 2.84375 15.691406 C 2.84375 16.355469 2.941406 17.007812 3.007812 17.671875 C 3.132812 17.804688 3.070312 17.792969 3.257812 17.726562 C 5.097656 15.300781 5.03125 14.824219 5.863281 11.652344 C 6.3125 12.472656 7.46875 12.917969 8.390625 12.917969 C 12.261719 12.917969 14 9.277344 14 5.996094 C 14 2.507812 10.871094 0.226562 7.4375 0.226562 Z M 7.4375 0.226562 " />
+                    </g>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="blog-one__author">
+              <img class="blog-one__author-img" src="images/avatar/blog-author.jpg" alt="author">
+              <div class="blog-one__author-info">
+                <p class="blog-one__author-name">JHON DOE</p>
+                <p class="blog-one__author-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo dajsna for tempor incididunt ut
+                  labore et dolore
+                  magna aliqua. Quis ipsum more in the a mo spendisse ultrices gravida. Risus commodo.
                 </p>
               </div>
             </div>
-            <div class="blog-page__item">
-              <a class="blog-page__item-link" href="#">
-                <img class="blog-page__img" src="images/blog/page-2.jpg" alt="blog img">
-              </a>
-              <div class="blog-page__item-box">
-                <a class="blog-page__item-title" href="#">
-                  Be prepared to sweat a lot, but at least in the Southern regions there’s a good chance you’ll get to
-                  enjoy!
-                </a>
-                <div class="blog-box">
-                  <a class="blog-box__author" href="#">By Admin</a>
-                  <div class="blog-box__date">10 January, 2020</div>
+            <div class="comments-titile">
+              2 COMMENTS
+            </div>
+            <div class="comments">
+              <img class="comments__img" src="images/avatar/1.jpg" alt="avatar">
+              <div class="comments__content">
+                <div class="comments__content-top">
+                  <p class="comments__content-name">Michle Jhon</p>
+                  <p class="comments__content-date">2 days ago</p>
                 </div>
-                <p class="blog-page__item-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna
-                  aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodoami viverra maycenas acchmsan lacus vel
+                <p class="comments__content-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna
+                  aliqua. Qus ipsum speissei ultrices gravida. Risus commodo viverra maeenas accumsan lacus vel
                   facilisis.
                 </p>
+                <a class="comments__content-reply" href="#">Reply</a>
               </div>
             </div>
-            <div class="blog-page__item blog-page__item--slider">
-              <div class="blog-page__slider">
-                <img class="blog-page__img" src="images/blog/page-3.jpg" alt="blog img">
-                <img class="blog-page__img" src="images/blog/page-2.jpg" alt="blog img">
-                <img class="blog-page__img" src="images/blog/page-1.jpg" alt="blog img">
-              </div>
-              <div class="blog-page__item-box">
-                <a class="blog-page__item-title" href="#">
-                  Be prepared to sweat a lot, but at least in the Southern regions there’s a good chance you’ll get to
-                  enjoy!
-                </a>
-                <div class="blog-box">
-                  <a class="blog-box__author" href="#">By Admin</a>
-                  <div class="blog-box__date">10 January, 2020</div>
+            <div class="comments">
+              <img class="comments__img" src="images/avatar/2.jpg" alt="avatar">
+              <div class="comments__content">
+                <div class="comments__content-top">
+                  <p class="comments__content-name">Michle Jhon</p>
+                  <p class="comments__content-date">2 days ago</p>
                 </div>
-                <p class="blog-page__item-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna
-                  aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodoami viverra maycenas acchmsan lacus vel
+                <p class="comments__content-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore
+                  magna
+                  aliqua. Qus ipsum speissei ultrices gravida. Risus commodo viverra maeenas accumsan lacus vel
                   facilisis.
                 </p>
+                <a class="comments__content-reply" href="#">Reply</a>
               </div>
             </div>
-            <div class="blog-page__item blog-page__item--no-image">
-              <div class="blog-page__item-box">
-                <a class="blog-page__item-title" href="#">
-                  Be prepared to sweat a lot, but at least in the Southern regions there’s a good chance you’ll get to
-                  enjoy!
-                </a>
-                <div class="blog-box">
-                  <a class="blog-box__author" href="#">By Admin</a>
-                  <div class="blog-box__date">10 January, 2020</div>
-                </div>
-                <p class="blog-page__item-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna
-                  aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodoami viverra maycenas acchmsan lacus vel
-                  facilisis.
-                </p>
+            <form class="comments-form action=" #">
+              <p class="blog-one__form-title">LEAVE A REPLY</p>
+              <div class="comments-form__box-input">
+                <input class="comments-form__text-input" placeholder="Your name" type="text">
+                <input class="comments-form__text-input" placeholder="Your email" type="text">
               </div>
-            </div>
+              <textarea class="comments-form__textarea" placeholder="Your comment"></textarea>
+              <button class="comments-form__btn" type="submit">
+                POST COMMENT
+              </button>
+            </form>
           </div>
           <div class="blog-page__aside">
             <div class="filter-search filter__item">
