--- a/app/shop.html
+++ b/app/shop.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MARCHO</title>
     <link rel="stylesheet" href="css/shop.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
 
   <body>
@@ -17,6 +18,9 @@
         <img class="logo__img" src="images/logo.png" alt="logo">
       </a>
       <nav class="menu">
+        <button class="menu__btn"> 
+          <span></span>
+        </button>     
         <ul class="menu__list">
           <li class="menu__list-item">
             <a class="menu__list-link menu__list-link--active" href="#">home</a>
@@ -79,6 +83,9 @@
       <section class="shop">
         <div class="container">
           <div class="shop__inner">
+            <button class="shop__filters-btn">
+              <img src="images/icons/filter-solid.svg" alt="">
+            </button>
             <div class="shop__filters filter">
               <div class="filter__item filter-search">
                 <h3 class="filter__title">Search</h3>
